--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "highlight.js": "^11.11.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-easy-panzoom": "^0.4.4",
+    "react-zoom-pan-pinch": "^3.7.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
